<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        >

        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
            android:weightSum="1"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/exam_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Material.Notification.Info" />

                <ImageView
                    android:id="@+id/status_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/ExamStatus" />

                <TextView
                    android:id="@+id/status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Notification.Info" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_weight="0.5"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/clinic_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_local_hospital_16dp"
                    android:textAlignment="textStart"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
                     />

                <TextView
                    android:id="@+id/patient_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_person_16dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
                    android:textAlignment="textStart"
                     />

                <TextView
                    android:id="@+id/execution_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_today_16dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
                    android:gravity="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right_16dp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
