...
    <string name="desc">DESC</string>
    <string name="identification">Protocolo</string>
    <string name="test_wrong_password">wrongpassword</string>
    <string name="test_multi_role_password">admin</string>
    <string name="test_multi_role_user">doctor</string>
    <string name="test_wrong_user">wronguser</string>
    <string name="test_single_role_user">doctor2</string>
    <string name="test_single_role_password">Admin1</string>
    <string name="gs_role_option_pro">Professional</string>
    <string name="ready_char">R</string>
    <string name="ready">Pronto</string>
    <string name="available">Disponível</string>
    <string name="finished_char">F</string>
    <string name="finished">Pronto</string>
...
    <string name="exam_already_associated">Exame já associado.</string>
    <string name="exam_associated_fail">Exame não encontrado ou protocolo inválido.</string>
    <string name="exam_associated_internalfail">Exame não encontrado</string>
    <string name="identification_required">Identification is required!</string>
    <string name="accesscode_required">Protocolo não pode estar em branco!</string>
    <string name="id_and_ac_required">Identification and access code are required!</string>
    <string name="test_add_exam_id">GKS0004</string>
    <string name="test_add_exam_accesscode">01012001</string>
    <string name="test_add_exam_accesscode_wrong">01012002</string>
    <string name="associate">Associar exame</string>
    <string name="exam_referring_phys">Profissional responsável</string>
    <string name="download_documents">Anexos</string>
    <string name="patient_role">ROLE_PATIENT</string>
    <string name="pdf">Pdf icon</string>
    <string name="no_report">Nenhum laudo encontrado para este exame.</string>
...
