<RelativeLayout
    android:id="@+id/examOverviewFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/failText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textColor="@color/colorError"
        android:drawableStart="@drawable/ic_error_36dp_error"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
       />

    <ProgressBar
        android:id="@+id/gs_exam_images_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/gs_exam_overview_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/examOverviewList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="3dp">


            </android.support.v7.widget.RecyclerView>

        </android.support.v4.widget.SwipeRefreshLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add_24dp_white" />

    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>