<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/gs_username_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/NewExamInput"
            app:hintTextAppearance="@style/TextAppearance.App.Authentication.Progress">

            <EditText
                android:id="@+id/new_exam_identification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/examIdentification"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTextColor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/gs_protocol_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/NewExamInput"
            app:hintTextAppearance="@style/TextAppearance.App.Authentication.Progress">

            <EditText
                android:id="@+id/new_exam_access_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/accessCode"
                android:inputType="textPassword"
                android:textColor="@color/colorTextColor" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_exam_error_msg"
            android:layout_marginTop="12dp"
            android:textSize="12sp"
            android:textColor="@color/colorError"
            />

        <Button
            android:layout_gravity="end"
            android:id="@+id/ass_exam_oke_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:text="@string/associate"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>